2012-06-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	godmode/reporting/graph_builder.graph_editor.php: Fixed some
	metaconsole connections checks merged from trunk

2012-06-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Improved several 
	parts of SLA reports. Add icons to criticity, etc.
	
	* include/functions_api.php: Fixed bug in get events
	api function remaning function
	
	* godmode/reporting/graph_builder.graph_editor.php: Increase
	the size of little combo boxes in combined graphs editor

2012-06-22 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager/load_updatemanager.php,
	extensions/update_manager/lib/functions.ajax.php,
	extensions/update_manager/lib/libupdate_manager_client.php,
	extensions/update_manager/main.php,
	extensions/update_manager/debug.php: added the feature to get traces
	of execution. Only change the flag for debug in debug.php .

2012-06-22  Sancho Lerena <slerena@artica.es>

	* godmode/massive/massive_edit_modules.php: Changed label to a more
	appropiate.

2012-06-21  Ramon Novoa  <rnovoa@artica.es>

	* extensions/update_manager.php: Ignore blank lines in installation SQL
	  file.

2012-06-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 include/graphs/functions_fsgraph.php: Blank spaces were removed 
	 unnecessarily on flash string graphs.

2012-06-21 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager/load_updatemanager.php: fixed the lost
	parameter for keygen, the dbtype.
	
	* extensions/update_manager/lib/libupdate_manager_client.php: fixed
	when update enterprise packages maybe sometimes try to update again
	and again and again....like spoon killer.

2012-06-21  Sancho Lerena <slerena@artica.es>

	* extensions/update_manager/sql/update_manager.oracle.sql,
	extensions/update_manager/sql/update_manager.sql,
	extensions/update_manager/sql/update_manager.postgreSQL.sql: Updated